--- a/frontend/package.json
+++ b/frontend/package.json
@@ -2,6 +2,7 @@
   "name": "@tindev/frontend",
   "version": "0.1.0",
   "private": true,
+  "proxy": "https://tindev-gustavo.herokuapp.com",
   "dependencies": {
     "axios": "^0.19.0",
     "react": "^16.8.6",
