--- a/src/client/package.json
+++ b/src/client/package.json
@@ -2,9 +2,9 @@
   "name": "@tindev/frontend",
   "version": "0.1.0",
   "private": true,
-  "proxy": "https://tindev-gustavo.herokuapp.com",
   "dependencies": {
     "axios": "^0.19.0",
+    "dotenv": "^8.2.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-router-dom": "^5.0.1",
